Wed Aug 18 08:56:01 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* templates/automake.mpd:

	  Changed to use am_includes, rev_avoids, and rev_requires.

	* modules/AutomakeProjectCreator:

	  Changed fill_value to understand am_includes, rev_avoids, and
	  rev_requires.  am_includes prepends $(srcdir) to any relative
	  include paths; rev_avoids and and rev_requires reverses the
	  order of the avoids and requires lists.  This is useful for
	  the trailing comments after the "endif" in conditionals.

Fri Aug 13 18:31:01 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* templates/automake.mpd:
	  Use INSTALL_THIS_TARGET to determine whether to use the
	  noinst_ prefix.

	* template/automakedll.mpt:
	  Define INSTALL_THIS_TARGET for use by automake.mpd.

Fri Aug 13 10:53:57 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* templates/automake.mpd:
	  Tweak conditionals so that generated files don't have spurious
	  blank lines.

Fri Aug 13 10:25:31 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* modules/AutomakeProjectCreator.pm:
	  Changed sort_files to return 1.  While this is not required by
	  automake, it makes the resulting Makefile.am's easier to read.
	  This is important now that we're still hand-editing the MPC
	  generated files.

	* templates/automake.mpd:
	  Add pidl_files to headers so they'll be installed.

Thu Aug 12 09:42:55 2004  Chad Elliott  <elliott_c@ociweb.com>

        * clone_build_tree.pl:

          Modified the usage.

        * modules/NMakeProjectCreator.pm:
        * modules/ProjectCreator.pm:
        * modules/VC6ProjectCreator.pm:
        * modules/VC7ProjectCreator.pm:

          Removed code that converted $(...) to %...%.  During testing, it
          didn't seem necessary and was broken in some instances.  I don't
          even why it was added in the first place.

Thu Aug 12 03:33:45 UTC 2004  Don Hinton  <don.hinton@vanderbilt.edu>

        * templates/vc6dsp.mpd:
        * templates/vc6dspdll.mpt: